--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.10.0",
+    "dotenv": "^17.2.3",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
